# CNN

./: .gitignore  UML_Diagram.puml  UML_README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
backend/: CMakeLists.txt  build.sh
backend/include/model/: neural_network.h
backend/include/model/activation/: activation_function.h  relu_activation.h  sigmoid_activation.h  tanh_activation.h
backend/include/utils/: data_buffer.h  matrix.h
backend/src/model/: neural_network.cpp
backend/src/model/activation/: activation_function.cpp
backend/src/server/: server.cpp
backend/src/tests/: test_neural_network.cpp
backend/src/training/: train.cpp
frontend/: compile.sh  run_tests.sh  run_ui.sh
frontend/src/com/classifier/model/: ClassificationResult.java  ClassificationStatus.java
frontend/src/com/classifier/network/: ImageClassifierClient.java  NetworkClient.java
frontend/src/com/classifier/processing/: BrightnessProcessor.java  GrayscaleProcessor.java  ImageProcessor.java  ResizeProcessor.java
frontend/src/com/classifier/tests/: TestRunner.java
frontend/src/com/classifier/ui/: ImageClassifierUI.java
frontend/src/com/classifier/utils/: Cache.java
